# RustyTUICalendar

./: .gitignore  Cargo.toml  LICENSE  README.md
assets/: appointments.json  todos.json
src/: calendar_data.rs  calendar_widget.rs  data.rs  logic.rs  main.rs  to_do_data.rs  to_do_widget.rs  weather.rs  widgets.rs
