[package]
name = "cursive_tui_basics"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
ratatui = "0.28.1"
tui-textarea = "0.6.1"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.128"
reqwest = { version = "0.12.7", features = ["json"] }
tokio = { version = "1", features = ["full"] }